; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_sbrdsp_template.c_sbr_hf_apply_noise_3.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_sbrdsp_template.c_sbr_hf_apply_noise_3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ([2 x i32]*, i32*, i32*, i32, i32, i32)* @sbr_hf_apply_noise_3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sbr_hf_apply_noise_3([2 x i32]* %0, i32* %1, i32* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca [2 x i32]*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store [2 x i32]* %0, [2 x i32]** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load i32, i32* %11, align 4
  %15 = and i32 %14, 1
  %16 = mul nsw i32 2, %15
  %17 = sub nsw i32 1, %16
  store i32 %17, i32* %13, align 4
  %18 = load [2 x i32]*, [2 x i32]** %7, align 8
  %19 = bitcast [2 x i32]* %18 to i32**
  %20 = load i32*, i32** %8, align 8
  %21 = load i32*, i32** %9, align 8
  %22 = load i32, i32* %10, align 4
  %23 = load i32, i32* %13, align 4
  %24 = sub nsw i32 0, %23
  %25 = load i32, i32* %12, align 4
  %26 = call i32 @sbr_hf_apply_noise(i32** %19, i32* %20, i32* %21, i32 %22, i32 0, i32 %24, i32 %25)
  ret void
}

declare dso_local i32 @sbr_hf_apply_noise(i32**, i32*, i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
